Fix spacing and naming discrepancies

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,4 +1,4 @@
-body{
+body {
     background-color: #f3f3ec;
 }
 
@@ -8,66 +8,80 @@ body{
     width: 1000px;
 }
 
-header{
+h1,
+p,
+a {
+    color: #858484;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+header {
     width: 100%;
     height: 50px;
 }
 
-.mainHeader{
-    color: #858484;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+.main-header {
     font-size: 36px;
     text-align: center;
 }
-nav{
+
+nav {
     text-align: center;
     margin-bottom: 15px;
 }
 
-nav a{
-    color: #858484;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+nav a {
     font-size: 18px;
     font-weight: bold;
     margin: 5px;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-.mainLinks{
+.main-links {
     text-align: center;
     margin-bottom: 100px;
 }
 
-.mainLinks div{
+.main-links div {
     display: flex;
     justify-content: space-between;
 }
 
-img{
+img {
     margin: 8px 0px;
 }
 
-#leftRectangle{
+#gallery-main-link {
     margin-top: -42px;
 }
 
-#rightRectangle{
+#blog-main-link {
     margin-top: -42px;
 }
 
-.gallery{
+.about-me {
+    height: 400px;
+    background-color: pink;
+}
+
+#about-me-img {
+    float: left;
+    margin: 65px 10px;
+}
+
+.gallery {
     height: 550px;
 }
 
-#gallery-about{
+#gallery-about {
     position: absolute;
     margin-top: 80px;
 }
 
-#about-my-photography{
+#about-my-photography {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     position: relative;
     color: #f7f8e9;
@@ -75,19 +89,19 @@ img{
     margin: 0px 615px 0 185px;
 }
 
-.gallery-imgs img{
+.gallery-imgs img {
     position: absolute;
 }
 
-#puzzle-img{
+#puzzle-img {
     margin: -250px 0 0 385px;
 }
 
-#mirror-img{
+#mirror-img {
     margin: -190px 0 0 580px;
     z-index: +1;
 }
 
-#bench-img{
+#bench-img {
     margin: -230px 0 0 780px;
 }
